Fixed nav spacing, removed variant selector if only one, added discounts to show

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -120,35 +120,71 @@
 }
 
 // inventory card
-.card-inventory {
+.card-inventory-md-lg {
   display: flex;
   justify-content: space-between;
-  align-content: center;
   align-items: center;
   padding: 10px 5px;
   box-shadow: 0 1px 2px -2px gray;
-}
-.card-inventory-add {
-  display: flex;
-  justify-content: space-between;
+  .dropdown {
+    margin-right: 20px;
+  }
 }
 .card-inventory-shipping {
   p {
     font-size: 13px;
   }
 }
-.card-inventory-save {
-  background-color: red;
-}
-
 .card-inventory-qty {
   padding-right: 40px;
 }
-
-
-// Mobile
-@media screen and (max-width: 992px) {
-  .card-inventory-shipping {
-    display: none;
+.heart-save {
+  outline: none;
+  border: 0;
+  color: #97B1AB;
+  &:hover {
+    color: $turquoise;
+    font-size: 18px;
   }
 }
+.old-price {
+    text-decoration: line-through;
+    font-size: 13px;
+    margin-bottom: 0px;
+  }
+.new-price {
+  color: red;
+  font-weight: bold;
+}
+
+// Inventory card - mobile
+.card-inventory-xs-sm {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 1px 2px -2px gray;
+  .seller {
+    p {
+      font-size: 12px;
+    }
+    h4 {
+      margin-bottom: 3px;
+    }
+  }
+  .price {
+    p {
+      margin-bottom: 3px;
+    }
+  }
+  .heart-save {
+    background-color: white;
+  }
+}
+
+
+
+
+
+
+
+
